[package]
name = "speedracer"

description = "A crate for racing futures and ranking the results"
keywords = ["async", "futures", "race", "benchmark", "speed"]
homepage = "https://github.com/SeedyROM/speedracer"
repository = "https://github.com/SeedyROM/speedracer"
documentation = "https://docs.rs/speedracer"
readme = "README.md"

version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
eyre = "0.6.8"
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["rt", "time"] }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["rt", "time", "macros"] }